--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,216 @@
-transformers
-torch
-Pillow
-streamlit
+absl-py==2.1.0
+aiofiles==23.2.1
+altair==5.3.0
+annotated-types==0.7.0
+anyio==4.6.0
+asttokens==2.4.1
+astunparse==1.6.3
+attrs==23.2.0
+bleach==6.1.0
+blinker==1.8.2
+blis==0.7.11
+branca==0.7.2
+cachetools==5.3.3
+catalogue==2.0.10
+catboost==1.2.7
+cattrs==23.2.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+comm==0.2.2
+comtypes==1.4.7
+confection==0.1.4
+constants==0.6.0
+contourpy==1.2.0
+cycler==0.12.1
+cymem==2.0.8
+DateTime==5.5
+debugpy==1.8.1
+decorator==5.1.1
+distro==1.9.0
+easyocr==1.7.2
+executing==2.0.1
+fastapi==0.115.0
+ffmpy==0.4.0
+filelock==3.16.1
+Flask==3.0.3
+flatbuffers==24.3.25
+folium==0.16.0
+fonttools==4.48.1
+fsspec==2024.9.0
+gast==0.5.4
+gitdb==4.0.11
+GitPython==3.1.43
+google-pasta==0.2.0
+gradio==4.44.0
+gradio_client==1.3.0
+graphviz==0.20.3
+grpcio==1.64.1
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.2
+huggingface-hub==0.25.0
+idna==3.7
+imageio==2.35.1
+importlib_resources==6.4.5
+ipykernel==6.29.4
+ipython==8.25.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.3
+jiter==0.5.0
+joblib==1.3.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kaggle==1.6.14
+keras==3.3.3
+kiwisolver==1.4.5
+langcodes==3.4.0
+language_data==1.2.0
+lazy_loader==0.4
+libclang==18.1.1
+marisa-trie==1.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml-dtypes==0.3.2
+mpmath==1.3.0
+murmurhash==1.0.10
+mysql-connector-python==8.2.0
+namex==0.0.8
+nest-asyncio==1.6.0
+networkx==3.3
+ninja==1.11.1.1
+nltk==3.8.1
+numpy==1.26.2
+openai==1.47.1
+opencv-python==4.10.0.82
+opencv-python-headless==4.10.0.82
+openmeteo_requests==1.2.0
+openmeteo_sdk==1.11.4
+opt-einsum==3.3.0
+optree==0.11.0
+orjson==3.10.7
+outcome==1.3.0.post0
+packaging==23.2
+pandas==2.2.0
+parso==0.8.4
+patsy==0.5.6
+phonenumbers==8.13.35
+pillow==10.2.0
+platformdirs==4.2.2
+plotly==5.22.0
+preshed==3.0.9
+prompt_toolkit==3.0.47
+protobuf==4.21.12
+psutil==5.9.8
+pure-eval==0.2.2
+pyarrow==16.1.0
+PyAudio==0.2.14
+pyclipper==1.3.0.post5
+pycparser==2.22
+pydantic==2.7.2
+pydantic_core==2.18.3
+pydeck==0.9.1
+pydub==0.25.1
+Pygments==2.18.0
+pyparsing==3.1.1
+pypiwin32==223
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
+PySocks==1.7.1
+pytesseract==0.3.13
+python-bidi==0.6.0
+python-dateutil==2.8.2
+python-multipart==0.0.10
+python-slugify==8.0.4
+pyttsx3==2.97
+pytz==2024.1
+pywin32==306
+PyYAML==6.0.2
+pyzmq==26.0.3
+referencing==0.35.1
+regex==2024.5.15
+requests==2.31.0
+requests-cache==1.2.0
+retry-requests==2.0.0
+rich==13.7.1
+rpds-py==0.18.1
+ruff==0.6.7
+safetensors==0.4.5
+scikit-image==0.24.0
+scikit-learn==1.3.2
+scipy==1.11.3
+seaborn==0.13.2
+selenium==4.20.0
+semantic-version==2.10.0
+setuptools==69.5.1
+shapely==2.0.6
+shellingham==1.5.4
+six==1.16.0
+smart-open==6.4.0
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SpeechRecognition==3.10.4
+speedtest==0.0.1
+srsly==2.4.8
+stack-data==0.6.3
+starlette==0.38.6
+statsmodels==0.14.3
+streamlit==1.38.0
+streamlit-option-menu==0.3.13
+sympy==1.13.3
+tenacity==8.3.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-intel==2.16.1
+termcolor==2.4.0
+text-unidecode==1.3
+thinc==8.2.3
+threadpoolctl==3.2.0
+tifffile==2024.9.20
+tokenizers==0.19.1
+toml==0.10.2
+tomlkit==0.12.0
+toolz==0.12.1
+torch==2.4.1
+torchvision==0.19.1
+tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.44.2
+trio==0.25.0
+trio-websocket==0.11.1
+typer==0.12.5
+typing_extensions==4.11.0
+tzdata==2024.1
+url-normalize==1.4.3
+urllib3==2.2.1
+uvicorn==0.30.6
+wasabi==1.1.2
+watchdog==4.0.1
+wcwidth==0.2.13
+weasel==0.3.4
+webencodings==0.5.1
+websockets==12.0
+Werkzeug==3.0.3
+wheel==0.43.0
+wrapt==1.16.0
+wsproto==1.2.0
+xyzservices==2024.4.0
+zope.interface==6.3
